hydrated-manifests/templates/namespace.yaml
---
# Source: kiali/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    name: "kiali"
  name: "kiali"
